--- a/WpfCrud/WpfCrud.csproj
+++ b/WpfCrud/WpfCrud.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -66,6 +67,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="BLL\CategoryBLL.cs" />
+    <Compile Include="ColumnColorAttribute.cs" />
     <Compile Include="Context\SqlContext.cs" />
     <Compile Include="CustomControls\TitledDataGrid.cs" />
     <Compile Include="MainWindow.xaml.cs">
